--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@milktoast-lab/SolNFTBot",
+  "name": "SolanaNFTBot",
   "version": "0.1.0",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
